--- a/front/src/index.css
+++ b/front/src/index.css
@@ -23,8 +23,9 @@ code {
 }
 
 .main {
-    
-    padding: 30px 30px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
     flex-grow: 1; /* прижимаем footer к низу страницы */
 }
 
