Изменила стили в тестах и у кнопки в комиксах

--- a/front/src/components/Tests/Test5/Test5.css
+++ b/front/src/components/Tests/Test5/Test5.css
@@ -2,8 +2,11 @@
     width: 200px;
     height: 50px !important;
     margin-bottom: 20px !important;
-    padding: 20px;
+    padding: 10px;
     font-size: 30px;
     line-height: 1;
     font-weight: 700;
+    box-sizing: border-box;
 }
+
+
