--- a/front/src/components/Tests/TestButton/TestButton.css
+++ b/front/src/components/Tests/TestButton/TestButton.css
@@ -1,5 +1,6 @@
 .test__btn {
     min-width: 64px;
+    margin-top: 70px;
     margin-bottom: 30px;
     padding: 6px 16px;
     font-family: "Roboto", "Helvetica", "Arial", sans-serif;
@@ -13,4 +14,10 @@
     background-color: #2e7d32;
     box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%), 0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
     cursor: pointer;
+}
+
+@media screen and (max-width: 540px){
+    .test__btn {
+        margin-top: 0;
+    }
 }
