--- a/front/src/App.css
+++ b/front/src/App.css
@@ -118,14 +118,14 @@ body {
         "Helvetica Neue", sans-serif;
 }
 
-.home {
-    font-size: 25px;
-    color: white;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
-        "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
-        "Helvetica Neue", sans-serif;
-    text-decoration: none;
-}
+/*.home {*/
+/*    font-size: 25px;*/
+/*    color: white;*/
+/*    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",*/
+/*        "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",*/
+/*        "Helvetica Neue", sans-serif;*/
+/*    text-decoration: none;*/
+/*}*/
 
 /*main*/
 .provide {
@@ -318,7 +318,7 @@ body {
 }
 
 .design {
-    
+
     max-width: 1249px;
     width: 100%;
     padding: 140px 20px;
@@ -559,7 +559,7 @@ body {
         max-width: 950px;
     }
 
-    
+
 }
 
 
@@ -568,7 +568,7 @@ body {
         font-size: 18px;
     }
     .title {
-       
+
         font-size: 40px;
     }
 }
@@ -613,7 +613,7 @@ body {
 
 @media screen and (max-width: 425px) {
     .design__form-btn {
-       width: 100%; 
+       width: 100%;
     }
     .title {
         font-size: 35px;
@@ -682,10 +682,10 @@ body {
     }
 }
 @media screen and (max-width: 350px) {
-    
+
     .title {
-       
+
         font-size: 30px;
-        
+
     }
 }
