--- a/front/src/components/Header/Header.css
+++ b/front/src/components/Header/Header.css
@@ -6,20 +6,31 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
-    background:  radial-gradient(110.67% 538.64% at 5.73% 50%, #b458bf 0%, #1A1A1C 100%), #352f4d;
+    justify-content: space-between;
+    align-items: center;
+    background: radial-gradient(110.67% 538.64% at 5.73% 50%, #b458bf 0%, #1A1A1C 100%), #352f4d;
     min-height: 125px;
 }
 
 .header__nav-wrp {
-    max-width: 1577px;
-    min-height: 125px;
+    /*position: relative;*/
+    position: absolute;
+    top: 0;
+    left: -21px;
     width: 100%;
-      mix-blend-mode: normal;
-    /* margin: 0 0 50px 0; */
+    height: 100%;
     display: flex;
-    justify-content: space-around;
-    align-items: center;
+    justify-content: space-between;
+    max-width: 1577px;
+    /*background-color: rgba(9, 9, 9, 0.4);*/
+    /*min-height: 125px;*/
+    /*width: fit-content;*/
+    /*width: 100%;*/
+    /*  mix-blend-mode: normal;*/
+    /* margin: 0 0 50px 0; */
+    /*display: flex;*/
+    /*justify-content: space-around;*/
+    /*align-items: center;*/
 }
 
 .text_box_header {
@@ -28,22 +39,22 @@
     color: #b458bf;
     text-transform: uppercase;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-        'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-        sans-serif;
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
 }
 
 .header-title__descrip {
     color: white;
     font-size: 20px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-        'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-        sans-serif;
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
     padding: 0 0 0 25px;
 }
 
 @media screen and (max-width: 460px) {
     .header__nav-wrp {
-flex-direction: column;
+        flex-direction: column;
     }
 
     .header-wrp {
