--- a/front/src/components/BurgerMenu/BurgerMenu.css
+++ b/front/src/components/BurgerMenu/BurgerMenu.css
@@ -1,7 +1,7 @@
 .menu-button {
     position: relative;
     display: block;
-    width: 40px;
+    width: 70px;
     padding: 12px;
     transform-origin: 16px 11px;
     outline: 0;
@@ -15,6 +15,9 @@
     border: medium none rgb(111, 255, 176);
     box-shadow: rgb(111, 255, 176) 0 0 2px 2px;
     outline: 0;
+}
+.menu-button:hover .bar {
+    background-color: #b458bf;
 }
 
 .menu-button:hover .bar:nth-of-type(1) {
@@ -42,7 +45,7 @@
     width: 40px;
 }
 
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 1080px) {
     .menu-button {
         display: none;
     }
