--- a/front/src/components/Menu/Menu.css
+++ b/front/src/components/Menu/Menu.css
@@ -4,16 +4,17 @@
     right: 0px;
     bottom: 0px;
     z-index: 10;
-    /*display: block;*/
+    /* display: block; */
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    width: 320px;
-    max-width: 400px;
-    height: fit-content;
+    width: 100%;
+    /* max-width: 400px; */
+    height: -moz-fit-content;
+    height: 100%;
     margin-top: 0px;
     padding: 100px 20px 50px;
-    /*align-items: stretch;*/
+    /* align-items: stretch; */
     background: radial-gradient(110.67% 538.64% at 5.73% 50%, #b458bf 0%, #1A1A1C 100%), #352f4d;
     transform: translateX(200%);
     transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
@@ -22,10 +23,13 @@
 
 .menu__open {
     transform: translateX(0);
+    display: flex;
+    align-items: center;
 }
 
 .menu__link {
-    padding: 12px 0;
+    padding: 12px 10px;
+    box-sizing: border-box;
     font-size: 25px;
     color: white;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
@@ -34,9 +38,9 @@
     text-decoration: none;
 }
 
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 1080px) {
     .menu {
-        position: relative;
+                position: relative;
         display: flex;
         flex-direction: row;
         width: 100%;
@@ -48,5 +52,6 @@
 
     .menu__link {
         /*padding: 15px 0;*/
+        /* font-size: 60px; */
     }
 }
