--- a/front/src/components/Search/Search.css
+++ b/front/src/components/Search/Search.css
@@ -100,3 +100,13 @@
         min-width: 165px;
     }
 }
+@media screen and (max-width: 600px) {
+    .search {
+        position: absolute;
+    top: 135px;
+    left: 25px;
+
+    }
+
+  
+}
