--- a/front/src/components/Header/Header.css
+++ b/front/src/components/Header/Header.css
@@ -14,11 +14,11 @@
 
 .header__nav-wrp {
     /*position: relative;*/
-    position: absolute;
-    top: 0;
-    left: -21px;
+    /*position: absolute;*/
+    /*top: 0;*/
+    /*left: -21px;*/
     width: 100%;
-    height: 100%;
+    /*height: 100%;*/
     display: flex;
     justify-content: space-between;
     max-width: 1577px;
