--- a/front/src/components/Menu/Menu.css
+++ b/front/src/components/Menu/Menu.css
@@ -4,8 +4,8 @@
     right: 0px;
     bottom: 0px;
     z-index: 10;
-    /*display: block;*/
-    display: flex;
+    display: none;
+    /*display: flex;*/
     flex-direction: column;
     align-items: flex-start;
     width: 320px;
@@ -15,12 +15,13 @@
     padding: 100px 20px 50px;
     /*align-items: stretch;*/
     background: radial-gradient(110.67% 538.64% at 5.73% 50%, #b458bf 0%, #1A1A1C 100%), #352f4d;
-    transform: translateX(200%);
+    transform: translateX(100%);
     transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
     box-sizing: border-box;
 }
 
 .menu__open {
+    display: flex;
     transform: translateX(0);
 }
 
