--- a/front/src/components/PageFoundResults/PageFoundResults.css
+++ b/front/src/components/PageFoundResults/PageFoundResults.css
@@ -22,6 +22,8 @@
 
 .page-found__link {
     text-decoration: none;
+    color: #3d3d3f;
+    cursor: pointer;
 }
 
 .page-found__author,
@@ -33,7 +35,9 @@
 
 .page-found__author-name,
 .page-found__painter-name {
+    margin-left: 7px;
     color: #767579;
+    text-decoration: none;
 }
 
 .page-found__text {
