--- a/front/src/components/AuthorPage/AuthorPage.css
+++ b/front/src/components/AuthorPage/AuthorPage.css
@@ -1,5 +1,5 @@
 .author {
-
+    padding: 20px
 }
 
 .author_title {
@@ -14,7 +14,7 @@
 
 .author_box {
     margin-bottom: 20px;
-    padding: 20px;
+    padding-bottom: 20px;
     border-bottom: 1px solid #cccccc;
 }
 
