--- a/front/src/components/common/Slider/Slider.css
+++ b/front/src/components/common/Slider/Slider.css
@@ -19,14 +19,20 @@
 }
 
 .slider__img {
-    max-width: 500px
+    max-width: 500px;
+    min-height: 375px;
 }
 
 .slider__text {
     padding-top: 30px;
     max-width: 500px;
     margin: 0 auto;
+    min-height: 200px;
 }
+.slider__count {
+    margin-bottom: 20px;
+}
+
 
 .slider__volue {
     width: 100px;
