--- a/front/src/index.css
+++ b/front/src/index.css
@@ -23,8 +23,8 @@ code {
 }
 
 .main {
-    /* flex-grow: 1; */
     width: 100%;
+    margin-top: 120px;
     margin-left: auto;
     margin-right: auto;
     flex-grow: 1; /* прижимаем footer к низу страницы */
@@ -32,4 +32,10 @@ code {
 
 .center {
     text-align: center;
+}
+
+@media screen and (max-width: 600px) {
+    .main {
+        margin-top: 160px;
+    }
 }
