--- a/front/src/App.css
+++ b/front/src/App.css
@@ -37,7 +37,7 @@
 }
 
 .title {
-    
+    margin-bottom: 20px;
     color: #b458bf;
     font-size: 50px;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
