--- a/front/src/components/Menu/Menu.css
+++ b/front/src/components/Menu/Menu.css
@@ -34,6 +34,11 @@
     text-decoration: none;
 }
 
+.menu__link:hover,
+.menu__link:focus{
+    color: #e588ed;
+}
+
 @media screen and (min-width: 1080px) {
     .menu {
         position: relative;
@@ -51,9 +56,7 @@
 
     /*.menu__open {*/
     /*  */
-
     /*}*/
-
     .menu__link {
         /*padding: 15px 0;*/
         /* font-size: 60px; */
