Стилизовала отзывы на главной странице

--- a/front/src/components/Lessons/LessonReview/LessonReview.module.css
+++ b/front/src/components/Lessons/LessonReview/LessonReview.module.css
@@ -6,8 +6,12 @@
 }
 
 .review {
-    display: flex;
-    text-align: start;
+display: flex;
+flex-wrap: wrap;
+justify-content: space-evenly;
+margin-bottom: 20px;
+padding: 0 10px;
+text-align: start;
 }
 
 .rev_head {
