--- a/front/src/components/Lessons/LessonReview/LessonReview.module.css
+++ b/front/src/components/Lessons/LessonReview/LessonReview.module.css
@@ -1,4 +1,5 @@
 .img_course {
+    display:block;
     width: 100px;
     height: 100px;
     object-fit: contain;
@@ -6,18 +7,26 @@
 }
 
 .review {
-display: flex;
-flex-wrap: wrap;
-justify-content: space-evenly;
-margin-bottom: 20px;
-padding: 0 10px;
-text-align: start;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    gap: 15px;
+    margin-bottom: 20px;
+    padding: 15px;
+    text-align: start;
+    border-radius: 5px;
+    box-shadow: -1px 1px 10px 1px rgba(40, 44, 52, 0.25);
 }
 
 .rev_head {
     color: #b458bf;
     font-size: 50px;
     /* margin-bottom: 50px; */
+}
+
+.rev_text_box {
+    min-width: 250px;
+    padding: 0 20px;
 }
 
 .rev_name {
@@ -43,4 +52,13 @@ text-align: start;
     margin-bottom: 25px;
     display: inline-block;
 
+}
+
+@media screen and (max-width: 578px){
+    .review {
+        justify-content: center;
+    }
+    .rev_text_box {
+        padding: 0 10px;
+    }
 }
