--- a/front/src/components/Tests/Test3/Test3.css
+++ b/front/src/components/Tests/Test3/Test3.css
@@ -4,6 +4,8 @@
     margin: 7px 7px;
     padding: 3px 3px;
     font-size: 20px;
+    border: 1px solid #1F3F68;
+    border-radius: 4px;
     cursor: pointer;
 }
 
