--- a/front/src/components/Tests/Test4/TestSlider.css
+++ b/front/src/components/Tests/Test4/TestSlider.css
@@ -2,5 +2,11 @@
     width: 80%;
     margin-left: auto;
     margin-right: auto;
-    text-align: left;
+    /*text-align: left;*/
+}
+
+.test__answers-count {
+    font-size: 14px;
+    text-align: center;
+    color: #4b4b4b;
 }
