--- a/front/src/index.css
+++ b/front/src/index.css
@@ -24,10 +24,13 @@ code {
 
 .main {
     width: 100%;
-    margin-top: 120px;
     margin-left: auto;
     margin-right: auto;
     flex-grow: 1; /* прижимаем footer к низу страницы */
+}
+
+.main-header {
+    margin-top: 120px;
 }
 
 .center {
@@ -35,7 +38,7 @@ code {
 }
 
 @media screen and (max-width: 600px) {
-    .main {
+    .main-header {
         margin-top: 160px;
     }
 }
