Добавила 3 часть для комикса

--- a/front/src/components/common/Slider/Slider.css
+++ b/front/src/components/common/Slider/Slider.css
@@ -19,8 +19,9 @@
 }
 
 .slider__img {
-    max-width: 500px;
-    min-height: 375px;
+    max-width: 100%;
+    /*max-width: 500px;*/
+    /*min-height: 375px;*/
 }
 
 .slider__text {
