--- a/front/src/components/Courses/Courses.css
+++ b/front/src/components/Courses/Courses.css
@@ -10,8 +10,8 @@
 .feature__products_item {
     opacity: 0.7;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-        'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-        sans-serif;
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
     font-size: 22px;
     line-height: 24px;
     font-weight: 600;
@@ -47,7 +47,7 @@
     max-width: 1140px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 .products_item {
@@ -75,7 +75,6 @@
     width: 360px;
     margin-bottom: 25px;
 }
-
 
 
 .products_item_text_box {
@@ -163,6 +162,7 @@
     color: #b458bf;
     margin-top: 25px;
 }
+
 .products_item_btn {
     top: 280px;
     /*left: 100px;*/
