--- a/front/src/components/Menu/Menu.css
+++ b/front/src/components/Menu/Menu.css
@@ -10,7 +10,12 @@
     height: 100vh;
     margin-top: 120px;
     padding-top: 25px;
-    background: radial-gradient(110.67% 538.64% at 5.73% 50%, #b458bf 0%, #1A1A1C 100%), #352f4d;
+    background: radial-gradient(
+            110.67% 538.64% at 5.73% 50%,
+            #b458bf 0%,
+            #1a1a1c 100%
+        ),
+        #352f4d;
     box-shadow: inset -6px 0px 9px 0px;
     transform: translateX(100%);
     transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
@@ -19,7 +24,6 @@
 }
 
 .menu__open {
-
     transform: translateX(0);
 }
 
@@ -29,13 +33,17 @@
     font-size: 25px;
     color: white;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
-    "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
-    "Helvetica Neue", sans-serif;
+        "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+        "Helvetica Neue", sans-serif;
     text-decoration: none;
 }
 
 .menu__link:hover,
-.menu__link:focus{
+.menu__link:focus {
+    color: #e588ed;
+}
+
+.menu__link_active {
     color: #e588ed;
 }
 
