--- a/front/src/components/Menu/Menu.css
+++ b/front/src/components/Menu/Menu.css
@@ -11,11 +11,11 @@
     margin-top: 120px;
     padding-top: 25px;
     background: radial-gradient(
-            110.67% 538.64% at 5.73% 50%,
-            #b458bf 0%,
-            #1a1a1c 100%
-        ),
-        #352f4d;
+        110.67% 538.64% at 5.73% 50%,
+        #b458bf 0%,
+        #1a1a1c 100%
+    ),
+    #352f4d;
     box-shadow: inset -6px 0px 9px 0px;
     transform: translateX(100%);
     transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
@@ -33,8 +33,8 @@
     font-size: 25px;
     color: white;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
-        "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
-        "Helvetica Neue", sans-serif;
+    "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+    "Helvetica Neue", sans-serif;
     text-decoration: none;
 }
 
@@ -46,6 +46,29 @@
 .menu__link_active {
     color: #e588ed;
 }
+
+.menu__user-wrap {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+    width: 200px;
+    color: #adadad;
+    font-size: 16px;
+}
+
+.menu__user {
+    width: 140px;
+    color: #FFFFFF;
+}
+
+.menu__user-link {
+    font-size: 25px;
+    color: #FFFFFF;
+    text-decoration: none;
+}
+
 
 @media screen and (min-width: 1080px) {
     .menu {
